--- a/data/preprocess_data.ipynb
+++ b/data/preprocess_data.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "4                                        Three Stars      3.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
     "# Keep relevant columns\n",
     "df = df[['reviewTime', 'reviewerID', 'reviewerName', 'reviewText', 'summary', 'overall']]\n",
     "\n",
-    "# Drop reviews with no reviewText since we are primarily interested in text analysis\n",
+    "# Drop reviews with no reviewText since we are primarily interested in analyzing review text\n",
     "df = df.dropna(subset=['reviewText'])\n",
     "\n",
     "df.head()"
@@ -351,6 +351,169 @@
    "source": [
     "This shows that review length skews right with many large outliers."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tokenization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\lucym\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>reviewTime</th>\n",
+       "      <th>reviewerID</th>\n",
+       "      <th>reviewerName</th>\n",
+       "      <th>reviewText</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>overall</th>\n",
+       "      <th>reviewTokens</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10 20, 2014</td>\n",
+       "      <td>A1D4G1SNUZWQOT</td>\n",
+       "      <td>Tracy</td>\n",
+       "      <td>Exactly what I needed.</td>\n",
+       "      <td>perfect replacements!!</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>[exactly, needed, .]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>09 28, 2014</td>\n",
+       "      <td>A3DDWDH9PX2YX2</td>\n",
+       "      <td>Sonja Lau</td>\n",
+       "      <td>I agree with the other review, the opening is ...</td>\n",
+       "      <td>I agree with the other review, the opening is ...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[agree, review, ,, opening, small, ., almost, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>08 25, 2014</td>\n",
+       "      <td>A2MWC41EW7XL15</td>\n",
+       "      <td>Kathleen</td>\n",
+       "      <td>Love these... I am going to order another pack...</td>\n",
+       "      <td>My New 'Friends' !!</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>[love, ..., going, order, another, pack, keep,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>08 24, 2014</td>\n",
+       "      <td>A2UH2QQ275NV45</td>\n",
+       "      <td>Jodi Stoner</td>\n",
+       "      <td>too tiny an opening</td>\n",
+       "      <td>Two Stars</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[tiny, opening]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>07 27, 2014</td>\n",
+       "      <td>A89F3LQADZBS5</td>\n",
+       "      <td>Alexander D.</td>\n",
+       "      <td>Okay</td>\n",
+       "      <td>Three Stars</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>[okay]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    reviewTime      reviewerID  reviewerName  \\\n",
+       "0  10 20, 2014  A1D4G1SNUZWQOT         Tracy   \n",
+       "1  09 28, 2014  A3DDWDH9PX2YX2     Sonja Lau   \n",
+       "2  08 25, 2014  A2MWC41EW7XL15      Kathleen   \n",
+       "3  08 24, 2014  A2UH2QQ275NV45   Jodi Stoner   \n",
+       "4  07 27, 2014   A89F3LQADZBS5  Alexander D.   \n",
+       "\n",
+       "                                          reviewText  \\\n",
+       "0                             Exactly what I needed.   \n",
+       "1  I agree with the other review, the opening is ...   \n",
+       "2  Love these... I am going to order another pack...   \n",
+       "3                                too tiny an opening   \n",
+       "4                                               Okay   \n",
+       "\n",
+       "                                             summary  overall  \\\n",
+       "0                             perfect replacements!!      5.0   \n",
+       "1  I agree with the other review, the opening is ...      2.0   \n",
+       "2                                My New 'Friends' !!      4.0   \n",
+       "3                                          Two Stars      2.0   \n",
+       "4                                        Three Stars      3.0   \n",
+       "\n",
+       "                                        reviewTokens  \n",
+       "0                               [exactly, needed, .]  \n",
+       "1  [agree, review, ,, opening, small, ., almost, ...  \n",
+       "2  [love, ..., going, order, another, pack, keep,...  \n",
+       "3                                    [tiny, opening]  \n",
+       "4                                             [okay]  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "nltk.download('stopwords')\n",
+    "\n",
+    "def tokenize_review(review, stopwords):\n",
+    "    tokens = nltk.word_tokenize(review)\n",
+    "    tokens = [t.lower() for t in tokens if t.lower() not in stopwords]\n",
+    "    return tokens\n",
+    "\n",
+    "stopwords = stopwords.words('english')\n",
+    "df['reviewTokens'] = df.apply(lambda row: tokenize_review(row['reviewText'], stopwords), axis=1)\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
