Cleaning up some preprocessing. Trying to vectorize textual features but running into kernel issues

--- a/src/data_processing/preprocess_data.ipynb
+++ b/src/data_processing/preprocess_data.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,12 @@
     "    df[i] = d\n",
     "  return pd.DataFrame.from_dict(df, orient='index')\n",
     "\n",
-    "df = getDF('AMAZON_FASHION.json.gz')"
+    "df = getDF('/Users/kingnutmegs/Documents/GitHub/NLP-Amazon-Review-Sentiment-Analysis/data/raw/AMAZON_FASHION.json.gz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,19 +68,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check for missing values\n",
-    "df.isnull().sum()"
+    "# Check for missing values and fill in missing values with empty strings\n",
+    "df.isnull().sum()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,9 +104,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>reviewTime</th>\n",
-       "      <th>reviewerID</th>\n",
-       "      <th>reviewerName</th>\n",
        "      <th>reviewText</th>\n",
        "      <th>summary</th>\n",
        "      <th>overall</th>\n",
@@ -115,45 +112,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10 20, 2014</td>\n",
-       "      <td>A1D4G1SNUZWQOT</td>\n",
-       "      <td>Tracy</td>\n",
        "      <td>Exactly what I needed.</td>\n",
        "      <td>perfect replacements!!</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>09 28, 2014</td>\n",
-       "      <td>A3DDWDH9PX2YX2</td>\n",
-       "      <td>Sonja Lau</td>\n",
        "      <td>I agree with the other review, the opening is ...</td>\n",
        "      <td>I agree with the other review, the opening is ...</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>08 25, 2014</td>\n",
-       "      <td>A2MWC41EW7XL15</td>\n",
-       "      <td>Kathleen</td>\n",
        "      <td>Love these... I am going to order another pack...</td>\n",
        "      <td>My New 'Friends' !!</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>08 24, 2014</td>\n",
-       "      <td>A2UH2QQ275NV45</td>\n",
-       "      <td>Jodi Stoner</td>\n",
        "      <td>too tiny an opening</td>\n",
        "      <td>Two Stars</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>07 27, 2014</td>\n",
-       "      <td>A89F3LQADZBS5</td>\n",
-       "      <td>Alexander D.</td>\n",
        "      <td>Okay</td>\n",
        "      <td>Three Stars</td>\n",
        "      <td>3.0</td>\n",
@@ -163,13 +145,6 @@
        "</div>"
       ],
       "text/plain": [
-       "    reviewTime      reviewerID  reviewerName  \\\n",
-       "0  10 20, 2014  A1D4G1SNUZWQOT         Tracy   \n",
-       "1  09 28, 2014  A3DDWDH9PX2YX2     Sonja Lau   \n",
-       "2  08 25, 2014  A2MWC41EW7XL15      Kathleen   \n",
-       "3  08 24, 2014  A2UH2QQ275NV45   Jodi Stoner   \n",
-       "4  07 27, 2014   A89F3LQADZBS5  Alexander D.   \n",
-       "\n",
        "                                          reviewText  \\\n",
        "0                             Exactly what I needed.   \n",
        "1  I agree with the other review, the opening is ...   \n",
@@ -185,7 +160,7 @@
        "4                                        Three Stars      3.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +171,7 @@
     "df = df.drop_duplicates(subset=['reviewText', 'reviewerID', 'overall'])\n",
     "\n",
     "# Keep relevant columns\n",
-    "df = df[['reviewTime', 'reviewerID', 'reviewerName', 'reviewText', 'summary', 'overall']]\n",
+    "df = df[['reviewText', 'summary', 'overall']]\n",
     "\n",
     "# Drop reviews with no reviewText since we are primarily interested in analyzing review text\n",
     "df = df.dropna(subset=['reviewText'])\n",
@@ -206,12 +181,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save to csv to be used in other files\n",
-    "df.to_csv('preprocessed_amazon_data.csv', index=False)"
+    "# Replace NaN values with empty strings in 'summary' column\n",
+    "df['summary'].fillna('', inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns with NaN values:\n",
+      "reviewText    False\n",
+      "summary       False\n",
+      "overall       False\n",
+      "dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for NaN values in each column\n",
+    "nan_columns = df.isna().any()\n",
+    "print(\"Columns with NaN values:\")\n",
+    "print(nan_columns)"
    ]
   },
   {
@@ -230,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +238,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -267,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +283,7 @@
        "Name: reviewTextLength, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +323,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -361,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +371,8 @@
       "[nltk_data]     /Users/kingnutmegs/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     /Users/kingnutmegs/nltk_data...\n"
+      "[nltk_data]     /Users/kingnutmegs/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     },
     {
@@ -396,9 +396,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>reviewTime</th>\n",
-       "      <th>reviewerID</th>\n",
-       "      <th>reviewerName</th>\n",
        "      <th>reviewText</th>\n",
        "      <th>summary</th>\n",
        "      <th>overall</th>\n",
@@ -409,9 +406,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10 20, 2014</td>\n",
-       "      <td>A1D4G1SNUZWQOT</td>\n",
-       "      <td>Tracy</td>\n",
        "      <td>Exactly what I needed.</td>\n",
        "      <td>perfect replacements!!</td>\n",
        "      <td>5.0</td>\n",
@@ -420,9 +414,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>09 28, 2014</td>\n",
-       "      <td>A3DDWDH9PX2YX2</td>\n",
-       "      <td>Sonja Lau</td>\n",
        "      <td>I agree with the other review, the opening is ...</td>\n",
        "      <td>I agree with the other review, the opening is ...</td>\n",
        "      <td>2.0</td>\n",
@@ -431,9 +422,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>08 25, 2014</td>\n",
-       "      <td>A2MWC41EW7XL15</td>\n",
-       "      <td>Kathleen</td>\n",
        "      <td>Love these... I am going to order another pack...</td>\n",
        "      <td>My New 'Friends' !!</td>\n",
        "      <td>4.0</td>\n",
@@ -442,9 +430,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>08 24, 2014</td>\n",
-       "      <td>A2UH2QQ275NV45</td>\n",
-       "      <td>Jodi Stoner</td>\n",
        "      <td>too tiny an opening</td>\n",
        "      <td>Two Stars</td>\n",
        "      <td>2.0</td>\n",
@@ -453,9 +438,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>07 27, 2014</td>\n",
-       "      <td>A89F3LQADZBS5</td>\n",
-       "      <td>Alexander D.</td>\n",
        "      <td>Okay</td>\n",
        "      <td>Three Stars</td>\n",
        "      <td>3.0</td>\n",
@@ -467,13 +449,6 @@
        "</div>"
       ],
       "text/plain": [
-       "    reviewTime      reviewerID  reviewerName  \\\n",
-       "0  10 20, 2014  A1D4G1SNUZWQOT         Tracy   \n",
-       "1  09 28, 2014  A3DDWDH9PX2YX2     Sonja Lau   \n",
-       "2  08 25, 2014  A2MWC41EW7XL15      Kathleen   \n",
-       "3  08 24, 2014  A2UH2QQ275NV45   Jodi Stoner   \n",
-       "4  07 27, 2014   A89F3LQADZBS5  Alexander D.   \n",
-       "\n",
        "                                          reviewText  \\\n",
        "0                             Exactly what I needed.   \n",
        "1  I agree with the other review, the opening is ...   \n",
@@ -496,7 +471,7 @@
        "4                 4                                             [okay]  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,9 +507,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV file saved as 'tokenized_data.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the new DataFrame as CSV\n",
+    "new_csv_file_path = 'tokenized_data.csv'\n",
+    "df.to_csv(new_csv_file_path)\n",
+    "\n",
+    "# Confirm the CSV file has been saved\n",
+    "print(f\"CSV file saved as '{new_csv_file_path}'\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vectorizing Textual Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "import pandas as pd\n",
+    "\n",
+    "tfidf_vectorizer = TfidfVectorizer()\n",
+    "\n",
+    "# Vectorize textual features\n",
+    "textual_features = df['reviewText'] + ' ' + df['summary']\n",
+    "X_textual = tfidf_vectorizer.fit_transform(textual_features)\n",
+    "\n",
+    "# Create new DataFrame with vectorized features and other relevant columns\n",
+    "new_df = pd.DataFrame(X_textual.toarray(), columns=tfidf_vectorizer.get_feature_names_out(), index=df.index)\n",
+    "new_df['overall'] = df['overall']  # Add target variable (overall score) to the new DataFrame\n",
+    "\n",
+    "new_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Save the new DataFrame as CSV\n",
+    "new_csv_file_path = 'data/processed/processed_data.csv'\n",
+    "new_df.to_csv(new_csv_file_path)\n",
+    "\n",
+    "# Confirm the CSV file has been saved\n",
+    "print(f\"CSV file saved as '{new_csv_file_path}'\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
@@ -554,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
