Maybe finished preprocessing? Added logistic regression modeling

--- a/src/data_processing/preprocess_data.ipynb
+++ b/src/data_processing/preprocess_data.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "4                                        Three Stars      3.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "Name: reviewTextLength, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
        "4                 4                                             [okay]  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,24 +507,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check for NaN values in each column and replace them\n",
+    "df['reviewText'].fillna('', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV file saved as 'tokenized_data.csv'\n"
+      "Columns with NaN values:\n",
+      "reviewText          False\n",
+      "summary             False\n",
+      "overall             False\n",
+      "reviewTextLength    False\n",
+      "reviewTokens        False\n",
+      "dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "nan_columns = df.isna().any()\n",
+    "print(\"Columns with NaN values:\")\n",
+    "print(nan_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns with NaN values:\n",
+      "Unnamed: 0          False\n",
+      "reviewText           True\n",
+      "summary              True\n",
+      "overall             False\n",
+      "reviewTextLength    False\n",
+      "reviewTokens        False\n",
+      "dtype: bool\n",
+      "CSV file saved as '../../data/processed/tokenized_data.csv'\n"
      ]
     }
    ],
    "source": [
     "# Save the new DataFrame as CSV\n",
-    "new_csv_file_path = 'tokenized_data.csv'\n",
+    "new_csv_file_path = '../../data/processed/tokenized_data.csv'\n",
+    "\n",
     "df.to_csv(new_csv_file_path)\n",
     "\n",
     "# Confirm the CSV file has been saved\n",
     "print(f\"CSV file saved as '{new_csv_file_path}'\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns with NaN values:\n",
+      "Unnamed: 0.1        False\n",
+      "Unnamed: 0          False\n",
+      "reviewText           True\n",
+      "summary              True\n",
+      "overall             False\n",
+      "reviewTextLength    False\n",
+      "reviewTokens        False\n",
+      "dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_new = pd.read_csv('../../data/processed/tokenized_data.csv')\n",
+    "nan_columns = df_new.isna().any()\n",
+    "print(\"Columns with NaN values:\")\n",
+    "print(nan_columns)"
    ]
   },
   {
@@ -536,36 +608,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
+    "from nltk.tokenize import word_tokenize\n",
     "import pandas as pd\n",
     "\n",
-    "tfidf_vectorizer = TfidfVectorizer()\n",
+    "df = pd.read_csv('../../data/processed/tokenized_data.csv')\n",
     "\n",
-    "# Vectorize textual features\n",
-    "textual_features = df['reviewText'] + ' ' + df['summary']\n",
-    "X_textual = tfidf_vectorizer.fit_transform(textual_features)\n",
+    "df['reviewText'].fillna('', inplace=True)\n",
+    "df['summary'].fillna('', inplace=True)\n",
     "\n",
-    "# Create new DataFrame with vectorized features and other relevant columns\n",
-    "new_df = pd.DataFrame(X_textual.toarray(), columns=tfidf_vectorizer.get_feature_names_out(), index=df.index)\n",
-    "new_df['overall'] = df['overall']  # Add target variable (overall score) to the new DataFrame\n",
+    "# Assuming 'reviewTokens' contains tokenized text for each row\n",
+    "tokenized_data = df['reviewTokens'].apply(eval)  # Convert string representation of list to list\n",
     "\n",
-    "new_df.head()"
+    "# Tag the documents\n",
+    "tagged_data = [TaggedDocument(words=doc, tags=[str(i)]) for i, doc in enumerate(tokenized_data)]\n",
+    "\n",
+    "# Train the Doc2Vec model\n",
+    "max_epochs = 100\n",
+    "vec_size = 20\n",
+    "alpha = 0.025\n",
+    "\n",
+    "model = Doc2Vec(vector_size=vec_size, alpha=alpha, min_alpha=0.00025, min_count=1, dm=1)\n",
+    "model.build_vocab(tagged_data)\n",
+    "\n",
+    "for epoch in range(max_epochs):\n",
+    "    model.train(tagged_data, total_examples=model.corpus_count, epochs=model.epochs)\n",
+    "    model.alpha -= 0.0002  # decrease the learning rate\n",
+    "    model.min_alpha = model.alpha  # fix the learning rate, no decay\n",
+    "\n",
+    "# Vectorize the textual features\n",
+    "vectorized_features = [model.infer_vector(doc.words) for doc in tagged_data]\n"
    ]
   },
   {
@@ -574,12 +650,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the new DataFrame as CSV\n",
-    "new_csv_file_path = 'data/processed/processed_data.csv'\n",
-    "new_df.to_csv(new_csv_file_path)\n",
+    "import numpy as np\n",
     "\n",
-    "# Confirm the CSV file has been saved\n",
-    "print(f\"CSV file saved as '{new_csv_file_path}'\")\n"
+    "# Convert the list to a NumPy array\n",
+    "vectorized_features_array = np.array(vectorized_features)\n",
+    "\n",
+    "# Save the NumPy array\n",
+    "np.save('vectorized_features.npy', vectorized_features_array)\n"
    ]
   },
   {
