--- a/src/model/logistic_regression.ipynb
+++ b/src/model/logistic_regression.ipynb
@@ -9,48 +9,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.5708256040575762\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Load your CSV data into a pandas DataFrame\n",
+    "df = pd.read_csv('../../data/processed/tokenized_data.csv')\n",
+    "\n",
+    "# Load the vectorized features from the .npy file\n",
+    "vectorized_features = np.load('../../data/processed/vectorized_features.npy')\n",
+    "\n",
+    "feature_vectors = pd.DataFrame(vectorized_features)\n",
+    "\n",
+    "\n",
+    "feature_vectors.columns = [f'vec_feature_{i}' for i in range(feature_vectors.shape[1])]\n",
+    "\n",
+    "X = feature_vectors # Feature vector\n",
+    "y = df['overall']  # Target variable\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Initialize and train the logistic regression model\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy = model.score(X_test, y_test)\n",
+    "print(\"Accuracy:\", accuracy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_csv('data/processed/modified_data.csv')\n",
-    "\n",
-    "# Convert textual features into numerical representations\n",
-    "tfidf_vectorizer = TfidfVectorizer()\n",
-    "X_textual = tfidf_vectorizer.fit_transform(df['reviewText'] + ' ' + df['summary'])\n",
-    "\n",
-    "# Combine textual features with other features (if any)\n",
-    "# For simplicity, let's use only textual features in this example\n",
-    "X = X_textual\n",
-    "\n",
-    "# Target variable\n",
-    "y = df['overall']\n",
-    "\n",
-    "# Train-test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Train logistic regression model\n",
-    "logistic_regression_model = LogisticRegression(max_iter=1000)\n",
-    "logistic_regression_model.fit(X_train, y_train)\n",
-    "\n",
-    "# Predict on the test set\n",
-    "y_pred = logistic_regression_model.predict(X_test)\n",
-    "\n",
-    "# Evaluate the model\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(\"Accuracy:\", accuracy)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
