--- a/src/model/logistic_regression.ipynb
+++ b/src/model/logistic_regression.ipynb
@@ -9,22 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.5708256040575762\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report\n",
     "\n",
     "# Load your CSV data into a pandas DataFrame\n",
     "df = pd.read_csv('../../data/processed/tokenized_data.csv')\n",
@@ -47,9 +41,12 @@
     "model = LogisticRegression()\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# Evaluate the model\n",
-    "accuracy = model.score(X_test, y_test)\n",
-    "print(\"Accuracy:\", accuracy)\n"
+    "# Predict the target variable for the test set\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Save the trained model to a file\n",
+    "with open('logistic_regression_model.pkl', 'wb') as file:\n",
+    "    pickle.dump(model, file)"
    ]
   },
   {
@@ -58,6 +55,261 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         1.0       0.49      0.40      0.44     20917\n",
+      "         2.0       0.20      0.00      0.00     12765\n",
+      "         3.0       0.30      0.09      0.13     19019\n",
+      "         4.0       0.37      0.07      0.12     28682\n",
+      "         5.0       0.60      0.96      0.74     88965\n",
+      "\n",
+      "    accuracy                           0.57    170348\n",
+      "   macro avg       0.39      0.30      0.29    170348\n",
+      "weighted avg       0.48      0.57      0.48    170348\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the trained logistic regression model from the file\n",
+    "with open('logistic_regression_model.pkl', 'rb') as file:\n",
+    "    model = pickle.load(file)\n",
+    "\n",
+    "# Calculate classification report\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression (w/ class weighting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.utils.class_weight import compute_class_weight\n",
+    "\n",
+    "class_weights = compute_class_weight(\n",
+    "                                        class_weight = \"balanced\",\n",
+    "                                        classes = np.unique(y_train),\n",
+    "                                        y = y_train                                                    \n",
+    "                                    )\n",
+    "class_weights = dict(zip(np.unique(y_train), class_weights))\n",
+    "\n",
+    "# Initialize and train the logistic regression model with class weights\n",
+    "model = LogisticRegression(class_weight=class_weights)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred4 = model.predict(X_train)\n",
+    "\n",
+    "# Save the trained model to a file\n",
+    "with open('logistic_regression_model_with_class_weights.pkl', 'wb') as file:\n",
+    "    pickle.dump(model, file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.4910536079085167\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the trained logistic regression model from the file\n",
+    "with open('logistic_regression_model_with_class_weights.pkl', 'rb') as file:\n",
+    "    model = pickle.load(file)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy = model.score(X_test, y_test)\n",
+    "print(\"Accuracy:\", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression (w/ undersampling the majority class)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "\n",
+    "# Undersample the majority class (5-star reviews) automatically\n",
+    "undersampler = RandomUnderSampler(sampling_strategy='auto', random_state=42)\n",
+    "X_train_resampled, y_train_resampled = undersampler.fit_resample(X_train, y_train)\n",
+    "\n",
+    "# Initialize and train the logistic regression model\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train_resampled, y_train_resampled)\n",
+    "\n",
+    "# Predict the target variable for the test set\n",
+    "y_pred2 = model.predict(X_test)\n",
+    "\n",
+    "# Save the trained model to a file\n",
+    "with open('logistic_regression_model_with_undersampling.pkl', 'wb') as file:\n",
+    "    pickle.dump(model, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         1.0       0.38      0.53      0.44     20917\n",
+      "         2.0       0.19      0.18      0.19     12765\n",
+      "         3.0       0.22      0.23      0.23     19019\n",
+      "         4.0       0.27      0.28      0.27     28682\n",
+      "         5.0       0.73      0.65      0.69     88965\n",
+      "\n",
+      "    accuracy                           0.49    170348\n",
+      "   macro avg       0.36      0.37      0.36    170348\n",
+      "weighted avg       0.51      0.49      0.50    170348\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the trained logistic regression model from the file\n",
+    "with open('logistic_regression_model_with_undersampling.pkl', 'rb') as file:\n",
+    "    model = pickle.load(file)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression (w/ oversampling minority classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "\n",
+    "# Oversample the minority classes (1 to 4-star reviews) automatically\n",
+    "oversampler = RandomOverSampler(sampling_strategy='auto', random_state=42)\n",
+    "X_train_resampled, y_train_resampled = oversampler.fit_resample(X_train, y_train)\n",
+    "\n",
+    "# Initialize and train the logistic regression model\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train_resampled, y_train_resampled)\n",
+    "\n",
+    "# Predict the target variable for the test set\n",
+    "y_pred3 = model.predict(X_test)\n",
+    "\n",
+    "# Save the trained model to a file\n",
+    "with open('logistic_regression_model_with_oversampling.pkl', 'wb') as file:\n",
+    "    pickle.dump(model, file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         1.0       0.38      0.53      0.44     20917\n",
+      "         2.0       0.19      0.18      0.19     12765\n",
+      "         3.0       0.22      0.23      0.23     19019\n",
+      "         4.0       0.27      0.28      0.27     28682\n",
+      "         5.0       0.73      0.65      0.69     88965\n",
+      "\n",
+      "    accuracy                           0.49    170348\n",
+      "   macro avg       0.36      0.37      0.36    170348\n",
+      "weighted avg       0.51      0.49      0.50    170348\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the trained logistic regression model from the file\n",
+    "with open('logistic_regression_model_with_oversampling.pkl', 'rb') as file:\n",
+    "    model = pickle.load(file)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression (w/ SMOTE sampling technique)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "# Apply SMOTE to the training data\n",
+    "smote = SMOTE(random_state=42)\n",
+    "X_train_resampled, y_train_resampled = smote.fit_resample(X_train, y_train)\n",
+    "\n",
+    "# Initialize and train the logistic regression model\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train_resampled, y_train_resampled)\n",
+    "\n",
+    "# Predict the target variable for the test set\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Save the trained model to a file\n",
+    "with open('logistic_regression_model_with_SMOTE.pkl', 'wb') as file:\n",
+    "    pickle.dump(model, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(classification_report(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
