--- a/src/model/logistic_regression/logistic_regression.ipynb
+++ b/src/model/logistic_regression/logistic_regression.ipynb
@@ -280,9 +280,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kingnutmegs/Documents/GitHub/NLP-Amazon-Review-Sentiment-Analysis/venv/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
    "source": [
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
@@ -304,9 +319,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         1.0       0.37      0.54      0.44     20917\n",
+      "         2.0       0.18      0.19      0.19     12765\n",
+      "         3.0       0.22      0.23      0.23     19019\n",
+      "         4.0       0.27      0.27      0.27     28682\n",
+      "         5.0       0.74      0.64      0.69     88965\n",
+      "\n",
+      "    accuracy                           0.49    170348\n",
+      "   macro avg       0.36      0.37      0.36    170348\n",
+      "weighted avg       0.51      0.49      0.50    170348\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(classification_report(y_test, y_pred))"
    ]
